gdnative/tests/ui/derive_fail_userdata.stderr
error: expected attribute arguments in parentheses: #[user_data(...)]
 --> $DIR/derive_fail_userdata.rs:5:1
  |
5 | #[user_data]
  | ^^^^^^^^^^^^
