gdnative/tests/ui/derive_fail_userdata.rs
use gdnative::prelude::*;

#[derive(NativeClass)]
#[inherit(Node)]
#[user_data]
struct Foo {}

impl Foo {
    fn new(_owner: &Node) -> Self {
        Foo {}
    }
}

fn main() {}
